force-app/main/default/objects/NCMT_Parameters__c/NCMT_Parameters__c.object-meta.xml
<CustomObject>
    <description>For BI Table Data Transfer - NCMT Parametric Data Record</description>
    <label>NCMT Parameters</label>
    <nameField>
        <displayFormat>BP-{0000000}</displayFormat>
        <label>NCMT Parameter</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>