force-app/main/default/objects/NCMT_Parameters__c/fields/Override_Comments__c.field-meta.xml
<CustomField>
    <fullName>Override_Comments__c</fullName>
    <label>Override Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>