force-app/main/default/objects/NCMT_Parameters__c/fields/Override_Comments_Label__c.field-meta.xml
<CustomField>
    <fullName>Override_Comments_Label__c</fullName>
    <label>Override Comments Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>