force-app/main/default/objects/NCMT_Parameters__c/fields/Parameter_Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Parameter_Section_Name__c</fullName>
    <label>Parameter Section Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>