force-app/main/default/objects/NCMT_Parameters__c/fields/User_Value__c.field-meta.xml
<CustomField>
    <fullName>User_Value__c</fullName>
    <label>User Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>