force-app/main/default/objects/NCMT_Parameters__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_ID__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Parameter_Section_Name__c</columns>
    <columns>Parameter_Name__c</columns>
    <columns>Default_Value__c</columns>
    <columns>User_Value__c</columns>
    <columns>Unit__c</columns>
    <columns>Override_Comments_Label__c</columns>
    <columns>Override_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>